# PendulumOnCar

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  simulate.py
include/CostFunction/: CostFunctionBase.h
include/DynamicModel/: DynamicModelBase.h
include/DynamicModel/PendulumOnCar/: PendulumOnCar.h
include/IntegrationMethod/: IntegrationMethodBase.h
include/IntegrationMethod/EulerIntegration/: EulerIntegration.h
include/IntegrationMethod/RKDPIntegration/: RKDPIntegration.h
include/IntegrationMethod/RungeKuttaIntegration/: RungeKuttaIntegration.h
include/ODESolver/: ODESolverBase.h
include/ODESolver/SimpleODESolver/: SimpleODESolver.h
include/TrajectoryOptimizer/: TrajectoryOptimizerBase.h
include/TrajectoryOptimizer/DDP/: DDP.h
script/: animate.py
src/: main.cpp
tests/: CMakeLists.txt  test_dynamic_model_base.cpp
